--- a/lesson-1.css
+++ b/lesson-1.css
@@ -51,6 +51,10 @@ header {
   margin-top: 20px;
 }
 
+.basket {
+  position: relative;
+}
+
 .basketHead {
   text-align: center;
 }
@@ -67,5 +71,18 @@ main {
   width: inherit;
   text-align: center;
   font-size: 20px;
+}
+
+.basketItem {
+  margin-left: 20px;
+  font-size: 18px;
+}
+
+.basketTotal {
+  margin-left: 20px;
+  font-size: 20px;
+  font-weight: 800;
+  bottom: 20px;
+  position: absolute;
 }
 /*# sourceMappingURL=lesson-1.css.map */
