--- a/lesson-1.scss
+++ b/lesson-1.scss
@@ -43,6 +43,10 @@ header {
     margin-top: 20px;
 }
 
+.basket {
+    position: relative;
+}
+
 .basketHead {
     text-align: center;
 }
@@ -57,4 +61,17 @@ main {
     width: inherit;
     text-align: center;
     font-size: 20px;
+}
+
+.basketItem {
+    margin-left: 20px;
+    font-size: 18px;
+}
+
+.basketTotal {
+    margin-left: 20px;
+    font-size: 20px;
+    font-weight: 800;
+    bottom: 20px;
+    position: absolute;
 }
